fix player button alignment

--- a/src/app/modules/player/components/Player/Player.scss
+++ b/src/app/modules/player/components/Player/Player.scss
@@ -47,7 +47,7 @@
 	position:absolute;
 	top: 0;
 	left: 0;
-	height: 60px;
+	height: 59px;
 	z-index: 1;
 	@include transition(all 100ms ease-in-out);
 }
@@ -58,7 +58,7 @@
 	left: 0;
 	z-index: 2;
 	width: 100%;
-	height: 60PX;
+	height: 59PX;
 	display: flex;
 	align-items: center;
 }
@@ -102,7 +102,7 @@
 .playerControls {
   display: flex;
   align-items: center;
-  justify-content: inherit;
+  justify-content: space-between;
   width: 50%;
 }
 
